# CNP_Bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README_zh.md  architecture.mmd  check_server_os.sh  debug_agent.ts  diagram.mmd  message-flow.mmd  package-lock.json  package.json  reproduce_issue.ts  setup.sh  start_with_ip.sh  test_agent_runner.cjs  vitest.config.ts
.ccb/: .claude-session  .codex-session
.claude/: CLAUDE.md
.omc/: project-memory.json
container/: Dockerfile  build.sh
container/deep-agent-runner/: pyproject.toml
container/deep-agent-runner/src/: hooks.py  ipc_tools.py  main.py  protocol.py
container/deep-agent-runner/tests/: test_hooks.py  test_ipc_tools.py  test_main.py  test_protocol.py
docs/: APPLE-CONTAINER-NETWORKING.md  DEBUG_CHECKLIST.md  REQUIREMENTS.md  SECURITY.md  SPEC.md  nanoclaw-architecture-final.md  nanorepo-architecture.md  unified-message-model-plan.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
launchd/: com.nanoclaw.plist
repo-tokens/: README.md  action.yml
scripts/: package-higress-wasm-offline.sh  repro-503-curl.sh  repro-tool-503.cjs  repro-tool-use-raw.py  run-ci-tests.ts
setup/: container.ts  environment.test.ts  mounts.ts  platform.ts  register.ts  service.test.ts  service.ts  status.ts  verify.ts
skills-engine/: apply.ts  constants.ts  index.ts  init.ts  migrate.ts  rebase.ts  replay.ts  state.ts  uninstall.ts  update.ts
src/: auth-middleware.ts  chat-skills-sync.test.ts  chat-skills-sync.ts  db.ts  (+67 more)
(+165 files in other folders)
