[project]
name = "cnp-deep-agent-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.21,<2.0.0",
    "langchain-anthropic>=1.4.0,<2.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
